5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1596_1446.log
== TEST (2019-03-26 18:35:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = input()
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qtd_de_michel = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:35:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = input()
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
-- EXECUTION TIME:
0.193642
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 5, in <module>
    qtd_de_michel = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:35:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = input()
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qtd_de_michel = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:36:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = input()
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
-- EXECUTION TIME:
0.169913
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 5, in <module>
    qtd_de_michel = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:36:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = input()
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qtd_de_michel = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float (input())
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = round(quantidade_de_michel,    3)
NameError: name 'quantidade_de_michel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:37:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float (input())
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
print(a)
-- EXECUTION TIME:
0.145165
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 6, in <module>
    a = round(quantidade_de_michel,    3)
NameError: name 'quantidade_de_michel' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float (input())
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = round(quantidade_de_michel,    3)
NameError: name 'quantidade_de_michel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:38:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float (input())
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
print(a)
-- EXECUTION TIME:
0.211347
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 6, in <module>
    a = round(quantidade_de_michel,    3)
NameError: name 'quantidade_de_michel' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float (input())
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = round(quantidade_de_michel,    3)
NameError: name 'quantidade_de_michel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:38:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float (input())
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
print(a)
-- EXECUTION TIME:
0.208794
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 6, in <module>
    a = round(quantidade_de_michel,    3)
NameError: name 'quantidade_de_michel' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float (input())
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = round(quantidade_de_michel,    3)
NameError: name 'quantidade_de_michel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:39:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = round(quantidade_de_michel,    3)
NameError: name 'quantidade_de_michel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:39:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
print(a)
-- EXECUTION TIME:
0.183413
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 6, in <module>
    a = round(quantidade_de_michel,    3)
NameError: name 'quantidade_de_michel' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:39:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = round(quantidade_de_michel,    3)
NameError: name 'quantidade_de_michel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:39:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_de_litros
a = round(quantidade_de_michel,    3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qtd_de_michel = 1/3 * qtd_de_litros
NameError: name 'qtd_de_litros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:40:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(quantidade_de_michel,    3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = round(quantidade_de_michel,    3)
NameError: name 'quantidade_de_michel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:40:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(qtd_de_michel,    3)
print(a)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:40:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(qtd_de_michel,    3)
print(a)
-- EXECUTION TIME:
0.240006
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:58:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(qtd_de_michel,    3)
print(a)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:58:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(qtd_de_michel,    3)
print(a)
-- EXECUTION TIME:
0.233623
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(qtd_de_michel,    3)
print(a)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(qtd_de_michel,    3)
print(a)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(qtd_de_michel,    3)
print(a)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(qtd_de_michel,    3)
print(a)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(qtd_de_michel,    3)
print(a)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(qtd_de_michel,    3)
print(a)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(qtd_de_michel,    3)
print(a)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(qtd_de_michel,    3)
print(a)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(qtd_de_michel,    3)
print(a)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michel = 1/3 * qtd_litros
a = round(qtd_de_michel,    3)
print(a)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
